--- a/components/NoteList/NoteList.module.css
+++ b/components/NoteList/NoteList.module.css
@@ -5,6 +5,7 @@
   padding: 0;
   margin: 0;
   list-style: none;
+  /* width: 100%; */
 }
 
 .listItem {
@@ -36,6 +37,7 @@
   -webkit-line-clamp: 3;
   -webkit-box-orient: vertical;
   overflow: hidden;
+  line-clamp: 3;
 }
 
 .button {
